--- a/tools/ncat/README
+++ b/tools/ncat/README
@@ -6,4 +6,4 @@ export ANDROID_NDK=/path/to/ndk_root
 PREFIX=/path/to/install_path ./android-configure.sh  --with-pcap=null --without-liblua --without-ndiff --without-nping --without-zenmap --without-nmap-update
 make build-ncat
 
-issue: c++ dep broken, so can't build nmap and install
+issue: c++ dep broken, so unable to build nmap and install
